Users can create companies

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,5 @@
+<div class="pull-right"><%= link_to 'Create Company', new_company_path, class: 'btn btn-primary' %></div>
+
 <table border=1 class="table">
   <thead>
     <tr>
