--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="pull-left"><%= link_to 'Create Company', new_company_path, class: 'btn btn-primary' %></div>
 
-<table border=1 class="table">
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
