--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,5 +1,3 @@
-<div class="pull-left"><%= link_to 'Create Company', new_company_path, class: 'btn btn-primary' %></div>
-
 <table class="table">
   <thead>
     <tr>
@@ -15,13 +13,13 @@
   <tbody>
     <% @companies.each do |company| %>
     <tr>
-      <td><%= link_to company.name, company_path(company) %></td>
+      <td><b><%= link_to company.name, company_path(company) %></b></td>
       <td><%= company.suffix %></td>
       <td><%= company.catch_phrase %></td>
       <td><%= company.email %></td>
       <td><%= company.start_date %></td>
       <td><%= company.industry %></td>
-      <td><%= link_to 'Delete Company', company_path(company), method: :delete, data: {confirm: "Are you totally sure??"}, class: 'btn btn-danger' %></td>
+      <td><%= link_to 'Delete', company_path(company), method: :delete, data: {confirm: "Are you totally sure??"}, class: 'btn btn-danger' %></td>
     </tr>
     <% end %>
   </tbody>
