--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
 
 <div class="container">
 
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <%= link_to 'Create Company', new_company_path, class: 'btn btn-primary' %>
+    </div>
+  </div>
+</nav>
+
 <%= yield %>
 
 </div>
