Users can edit companies from index and show pages

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,7 @@
+<div class="page-header">
+  <%= link_to 'Create Company', new_company_path, class: 'btn btn-primary' %>
+</div>
+
 <table class="table">
   <thead>
     <tr>
@@ -20,6 +24,7 @@
       <td><%= company.start_date %></td>
       <td><%= company.industry %></td>
       <td><%= link_to 'Delete', company_path(company), method: :delete, data: {confirm: "Are you totally sure??"}, class: 'btn btn-danger' %></td>
+      <td><%= link_to 'Edit', edit_company_path(company), class: 'btn btn-warning' %></td>
     </tr>
     <% end %>
   </tbody>
