--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -16,5 +16,6 @@
 
 <p>
   <%= link_to 'Delete', company_path(@company), method: :delete, data: {confirm: "Are you totally sure??"}, class: 'btn btn-danger' %>
+  <%= link_to 'Edit', edit_company_path(@company), class: 'btn btn-warning' %>
   <%= link_to 'Back', companies_path, class: 'btn btn-default' %>
 </p>
