--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@company, @location] do |f| %>
+<%= form_for ([@company, @location]) do |f| %>
 
 <p>
   <%= f.label :city %>
@@ -18,9 +18,11 @@
 </p>
 <p>
   <%= f.label :country %>
-  <%= f.text_field %>
+  <%= f.text_field :country %>
 </p>
 <p>
-  <%= f.submit %>
+  <%= f.submit class: 'btn btn-primary' %>
+  <%= link_to 'Back', companies_path, class: 'btn btn-default' %>
 </p>
+
 <% end %>
