Users can see reviews on product show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,7 +31,7 @@
   </thead>
 
   <tbody>
-    <% @company.products.review.each do |review| %>
+    <% @product.reviews.each do |review| %>
     <tr>
       <td><b><%= review.title %></b></td>
       <td><%= review.description %></td>
