--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,7 +33,7 @@
   <tbody>
     <% @product.reviews.each do |review| %>
     <tr>
-      <td><b><%= review.title %></b></td>
+      <td><b><%= link_to review.title, company_product_review_path(@company, @product, review) %></b></td>
       <td><%= review.description %></td>
       <td><%= review.rating %></td>
       <td><%= link_to 'Delete', company_product_review_path(@company, @product, review), method: :delete, data: {confirm: "Are you totally sure??"}, class: 'btn btn-danger' %></td>
